--- a/Jottly-alt/css/styles.css
+++ b/Jottly-alt/css/styles.css
@@ -1,3 +1,13 @@
  /* Sections
  ================================================== */
  /* Header */
+ #header {
+    background:url("../images/header.jpg") top center no-repeat;
+    background-size: cover;
+    min-height: 680px;
+    width: 100%;
+ }
+
+ #header .logo {
+  margin-top: 1em;
+ }
