--- a/Jottly-alt/css/styles.css
+++ b/Jottly-alt/css/styles.css
@@ -269,6 +269,7 @@ select {
     color: #4d4d4d;
     line-height: 1.4;
     margin-top: 1em;
+    margin-left: 2px;
   }
 
 #testimonials .avatar img {
