--- a/Jottly-alt/css/styles.css
+++ b/Jottly-alt/css/styles.css
@@ -58,77 +58,77 @@ select {
 }
 
 
- /* HEADER */
- #header {
-    background:url("../images/header.jpg") top center no-repeat;
-    background-size: cover;
-    min-height: 680px;
-    width: 100%;
- }
+/* HEADER */
+#header {
+  background:url("../images/header.jpg") top center no-repeat;
+  background-size: cover;
+  min-height: 680px;
+  width: 100%;
+}
 
- #header .logo {
+#header .logo {
   margin-top: 1em;
- }
+}
 
  #header nav {
   text-align: right;
   margin-top: 2em;
- }
+}
 
- #header nav ul li {
+#header nav ul li {
   display: inline-block;
- }
+}
 
- #header nav ul li a {
+#header nav ul li a {
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
   padding: 0.75em 2em;
- }
+}
 
- #header nav ul li a.btn {
+#header nav ul li a.btn {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   border-radius: 8px;
   border: 2px solid #fff;
- }
+}
 
- #header nav ul li a.btn:hover {
+#header nav ul li a.btn:hover {
   background: #fff;
   color: #009be8;
- }
+}
 
- #header .headertext {
+#header .headertext {
   margin-top: 10em;
- }
+}
 
- #header h1 {
+#header h1 {
   color: #fff;
   font-weight: 300;
   font-size: 4.5em;
   line-height: 1;
   text-shadow: 0 1px 2px rgba(0,0,0,.2);
   margin-bottom: 0.3em;
- }
+}
 
- #header p {
+#header p {
   color: #d5d5d5;
   font-size: 1.25em;
   line-height: 1.5;
   text-shadow: 0 1px 2px rgba(0,0,0,.2);
   margin-bottom: 1.2em;
- }
+}
 
- #header p strong {
+#header p strong {
   color: #fff;
- }
+}
 
 
- /* BENEFITS */
- #benefits {
+/* BENEFITS */
+#benefits {
   padding: 4em 0 0;
   text-align: center;
- }
+}
 
 #benefits h2 {
   color: #009be8;
@@ -141,7 +141,7 @@ select {
 }
 
 
- /* PRICING */
+/* PRICING */
 #pricing {
   background: #009be8;
   padding: 4em 0;
@@ -246,7 +246,7 @@ select {
   margin: 0;
 }
 
- /* TESTIMONIALS */
+/* TESTIMONIALS */
 #testimonials {
   padding: 4em 0;
   text-align: center;
@@ -260,41 +260,41 @@ select {
 #testimonials p {
   color: #9d9d9d;
   font-size: 1.2em;
- }
+}
 
 #testimonials blockquote {
-    border: none;
-    text-align: left;
-    font-size: 1em;
-    color: #4d4d4d;
-    line-height: 1.4;
-    margin-top: 1em;
-    margin-left: 2px;
-  }
+  border: none;
+  text-align: left;
+  font-size: 1em;
+  color: #4d4d4d;
+  line-height: 1.4;
+  margin-top: 1em;
+  margin-left: 2px;
+}
 
 #testimonials .avatar img {
-    border-radius: 50%;
-    float: left;
-    display: inline;
-    margin-right: 1em;
-    width: 65px;
-    height: 65px;
+  border-radius: 50%;
+  float: left;
+  display: inline;
+  margin-right: 1em;
+  width: 65px;
+  height: 65px;
 }
 
 #testimonials .avatar p {
-    text-align: left;
-    padding-top: 1.5em;
-    color: #5d5d5d;
-    font-weight: 900;
+  text-align: left;
+  padding-top: 1.5em;
+  color: #5d5d5d;
+  font-weight: 900;
 }
 
 #action {
-    background: url('../images/action.jpg') top center no-repeat;
-    background-size: cover;
-    min-height: 180px;
-    width: 100%;
-    padding: 4em 0;
-    text-align: center;
+  background: url('../images/action.jpg') top center no-repeat;
+  background-size: cover;
+  min-height: 180px;
+  width: 100%;
+  padding: 4em 0;
+  text-align: center;
 }
 
 #action h2 {
@@ -311,4 +311,39 @@ select {
 
 #action .row {
   margin-top: 3em;
+}
+
+/* Footer */
+#footer {
+  background: #009be8;
+  padding: 1em 0;
+}
+
+#footer nav ul {
+  margin-top: 0.5em;
+}
+ 
+#footer nav ul li {
+  display: inline;
+  margin: 0;
+}
+
+#footer nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin: 0 1em 0 0;
+  font-size: 1.1em;
+}
+
+#footer img {
+  float: right;
+}
+ 
+#footer p {
+  color: #fff;
+  line-height: 1;
+  text-transform: uppercase;
+  font-size: 0.7em;
+  margin-top: 0.5em;
 }
