Completed section 21. Added a delay to the downward animation of just the text in the header so it comes down at a different time than the header background

--- a/Jottly-alt/css/styles.css
+++ b/Jottly-alt/css/styles.css
@@ -100,6 +100,8 @@ select {
 
 #header .headertext {
   margin-top: 10em;
+  animation-delay: 0.7s;
+  -webkit-animation-delay: 0.7s; 
 }
 
 #header h1 {
